# FGK

./: CMakeLists.txt  FGK_1.sln
FGK_1/: AreaLight.cpp  AreaLight.h  Camera.cpp  Camera.h  DirectionLight.cpp  DirectionLight.h  FGK_1.cpp  FGK_1.vcxproj  FGK_1.vcxproj.filters  HitData.h  KdTree.cpp  KdTree.h  Light.h  LightIntensity.cpp  LightIntensity.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Plane.cpp  Plane.h  Point.h  PointLight.cpp  PointLight.h  Primitive.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  SpotLight.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  (+9 more)
FGK_1/Math/: float3.cpp  float3.h  float3x3.cpp  float3x3.h  float4.cpp  float4.h  float4x4.cpp  float4x4.h  int3.cpp  int3.h  matTransform.h  math_all.h  quaternion.cpp  quaternion.h
models/: cornellBox.mtl
